	* src/libgpukernel/opencl-obj.c: 'gpu_max_work_group_size' return as result value
		for OpenCL call.

2010-05-22
	* src/libgpuarch/gpupipeline.c: initial 6-stage design of GPU pipeline.
	* src/libgpukernel/gpukernel-local.h: file removed, unified in 'gpukernel.h'

2010-05-25
	* src/libgpukernel: fields in work-group, work-item, and wavefront unified.
	* src/libgpukernel: structure 'gpu_ndrange_t' added, code reorganized.

2010-05-26
	* src/libgpuarch: schedule stage, instruction emulation

2010-05-28
	* src/libcpuarch/processor.c: stage time measures removed. A profiler tool like
		'gprof' should be used for this purpose.
	* src/libcpuarch: names of files implementing stages changed.
	* src/libstruct/config.{c|h}: module redesigned.
	* src/libcpuarch/cpuarch.c: configuration for CPU moved into a configuration file
		with IniFile format, instead of command-line arguments.

2010-05-29
	* src/m2s.c: command-line interface updated.
	* src/m2s-fast.c: file removed. From now on, all is integrated in a single
		executable file: m2s
	* src/libcpuarch: global variables sim_cycle and sim_inst removed.
	* src/libcpuarch/sched.c: variable 'cpu' changed by 'node'.
	* src/libcpuarch: variable 'p' changed by 'cpu'.
	* src/libcpuarch: all 'p_XXX' functions and variables replaced by 'cpu_XXX'

2010-05-30
	* src/libcpukernel/loader.c: help message for context configuration file
	* src/libcpuarch/cpuarch.c: help message for CPU configuration file

2010-05-31
	* src/libcachesystem/cachesystem.c: help message for cache system configuration
		file.
	* src/m2s.c: last changes to statistics reports.

2010-06-02
	* src/libgpuarch/gpuarch.c: GPU pipeline debug

2010-06-03
	* src/m2s.c: option '--debug-cpu-pipeline'
	* src/libgpuarch/stg_fetch.c: working here.
	* src/libgpuarch: memory leaks
	* src/libgpuarch: 'gpu_device_t' replaced with 'gpu_t', and global variable
		'gpu' defined, similarly to libcpuarch module.
	* src/libgpuarch: first complete version of GPU pipeline.
